# iNumerics

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  make.sh  out.txt
examples/: CMakeLists.txt  test01.cpp  test02.cpp
include/: Interpolation.h  Model.h  ODESolver.h  Problem.h  Trajectory.h  Types.h  iNumerics.h  inbaseobject.h  inblaswrapper.h  inbyte.h  inbyte.hpp  inmatrix.h  inmatrix.hpp  inmemcollect.h  inmemcollect.hpp  inmemtype.h  inmemtype.hpp  instopwatch.h  instopwatch.hpp  intypes.h  inutil.h  invector.h  invector.hpp  newton.h  newton.hpp
src/: CMakeLists.txt  Interpolation.cpp  Model.cpp  ODESolver.cpp  Problem.cpp  Trajectory.cpp  inbaseobject.cpp  inbyte.cpp  inmatrix.cpp  invector.cpp
toolchain/: .iOS.cmake.swp
